--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,17 @@ language: python
 python:
     - pypy
 notifications:
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/e1474408a529d8a8630a
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
+env:
+    - PORTAGE_VER="2.3.20"
 addons:
   apt:
     update: true
-env:
-    global:
-        - PORTAGE_VER="2.3.16"
-        - REPOMAN_VER="2.3.6"
 before_install:
     - sudo apt-get -qq update
-    - pip install lxml
+    - pip install lxml==4.1.1
 before_script:
     - sudo chmod a+rwX /etc/passwd /etc/group /etc /usr
     - mkdir -p travis-overlay /etc/portage/ /usr/portage/distfiles
@@ -25,14 +20,13 @@ before_script:
     - mv .git travis-overlay/
     - wget "https://raw.githubusercontent.com/mrueg/repoman-travis/master/spinner.sh"
     - wget -qO - "https://github.com/gentoo/portage/archive/portage-${PORTAGE_VER}.tar.gz" | tar xz
-    - wget -qO - "https://github.com/gentoo/portage/archive/repoman-${REPOMAN_VER}.tar.gz" | tar xz
     - wget -qO - "https://github.com/gentoo-mirror/gentoo/archive/master.tar.gz" | tar xz -C /usr/portage --strip-components=1
     - chmod a+rwx spinner.sh
     - echo "portage:x:250:250:portage:/var/tmp/portage:/bin/false" >> /etc/passwd
     - echo "portage::250:portage,travis" >> /etc/group
     - wget "https://www.gentoo.org/dtd/metadata.dtd" -O /usr/portage/distfiles/metadata.dtd
     - ln -s portage-portage-${PORTAGE_VER}/cnf/repos.conf /etc/portage/repos.conf
-    - ln -s /usr/portage/profiles/default/linux/amd64/13.0 /etc/portage/make.profile
+    - ln -s /usr/portage/profiles/default/linux/amd64/17.1 /etc/portage/make.profile
     - cd travis-overlay
 script:
-- ./../spinner.sh "python ../portage-repoman-${REPOMAN_VER}/repoman/bin/repoman full -i -d"
+- ./../spinner.sh "python ../portage-portage-${PORTAGE_VER}/repoman/bin/repoman full -i -d"
